--- a/src/styles/custom/_typography.scss
+++ b/src/styles/custom/_typography.scss
@@ -1,24 +1,26 @@
+$fontstack: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+
 html {
-    font: 112.5%/1.45 'PT Serif', 'Georgia', serif;
-    overflow-y: scroll;
+    font: 112.5%/1.45 $fontstack;
 }
 
 body {
     color: hsla(0, 0%, 0%, 0.8);
-    font-family: 'PT Serif', 'Georgia', serif;
+    font-family: $fontstack;
     font-weight: normal;
     word-wrap: break-word;
     font-kerning: normal;
     font-feature-settings: "kern", "liga", "clig", "calt";
 }
 
-img {
-    max-width: 100%;
+/*font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));*/
+body {
+    font-size: calc(16px + (22 - 16) * ((100vw - 300px) / (1600 - 300)));
 }
 
 h1 {
     color: inherit;
-    font-family: PT Sans, sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 2.5rem;
     line-height: 1.1;
@@ -26,7 +28,7 @@ h1 {
 
 h2 {
     color: inherit;
-    font-family: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 1.73286rem;
     line-height: 1.1;
@@ -34,7 +36,7 @@ h2 {
 
 h3 {
     color: inherit;
-    font-family: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 1.4427rem;
     line-height: 1.1;
@@ -43,7 +45,7 @@ h3 {
 h4 {
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 1rem;
     line-height: 1.1;
@@ -52,7 +54,7 @@ h4 {
 h5 {
     margin-bottom: 1.45rem;
     color: inherit;
-    font-family: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 0.83255rem;
     line-height: 1.1;
@@ -60,7 +62,7 @@ h5 {
 
 h6 {
     color: inherit;
-    font-family: 'PT Sans', 'Arial', 'Helvetica', sans-serif;
+    font-family: $fontstack;
     text-rendering: optimizeLegibility;
     font-size: 0.75966rem;
     line-height: 1.1;
