--- a/src/styles/custom/_custom.scss
+++ b/src/styles/custom/_custom.scss
@@ -10,6 +10,9 @@ html, body, #___gatsby, #gatsby-focus-wrapper {
     width: 100%;
     height: 100%;
 }
+body {
+    height: auto;
+}
 
 img {
     max-width: 100%;
