Blog pages styles

--- a/src/styles/custom/_custom.scss
+++ b/src/styles/custom/_custom.scss
@@ -22,6 +22,11 @@ img {
     filter: brightness(60%);
 }
 
+.prose {
+    p {
+        @apply mb-4;
+    }
+}
 
 // 
 // Main Layout Styles
@@ -47,21 +52,11 @@ img {
 
 blockquote {
     @apply bg-white border-l-2 border-black-50 my-1 mx-2 py-1 px-2 text-black relative;
-    // quotes: "\201C""\201D""\2018""\2019";
 }
 
 blockquote span {
     @apply block text-right text-lg leading-tight mt-4 uppercase;
 }
-
-// blockquote:before {
-//     color: #ffffff;
-//     content: open-quote;
-//     font-size: 4em;
-//     line-height: 0.1em;
-//     margin-right: 0.25em;
-//     vertical-align: -0.4em;
-// }
 
 blockquote p {
     display: inline;
