--- a/src/styles/custom/_custom.scss
+++ b/src/styles/custom/_custom.scss
@@ -9,6 +9,7 @@ body {
 html, body, #___gatsby, #gatsby-focus-wrapper {
     width: 100%;
     height: 100%;
+    min-height: 100vh;
 }
 body {
     height: auto;
@@ -33,7 +34,7 @@ img {
 //______________________________
 
 .page-layout {
-    min-height: 100%;
+    min-height: 100vh;
     display: grid;
     column-gap: 0;
     grid-template-columns: 100%;
@@ -43,6 +44,12 @@ img {
         grid-template-columns: 16rem auto;
         grid-template-rows: 100%;
     }
+}
+
+.main-content {
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .awesome-css {
